--- a/package.json
+++ b/package.json
@@ -1,20 +1,30 @@
 {
-  "name": "@gozhtet/plugin-api",
-  "version": "1.0.0",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "freethinkel",
-  "license": "ISC",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/gozhtet/plugin-api.git"
-  },
-  "bugs": {
-    "url": "https://github.com/gozhtet/plugin-api/issues"
-  },
-  "homepage": "https://github.com/gozhtet/plugin-api#readme",
-  "description": ""
+	"name": "@gozhtet/plugin-api",
+	"version": "1.0.1",
+	"main": "src/index.js",
+	"bin": {
+		"gozhtet": "bin/gozhtet"
+	},
+	"scripts": {
+		"test": "echo \"Error: no test specified\" && exit 1"
+	},
+	"keywords": [
+		"gozhtet"
+	],
+	"author": "freethinkel",
+	"license": "ISC",
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/gozhtet/plugin-api.git"
+	},
+	"bugs": {
+		"url": "https://github.com/gozhtet/plugin-api/issues"
+	},
+	"homepage": "https://github.com/gozhtet/plugin-api#readme",
+	"description": "",
+	"dependencies": {
+		"@tauri-apps/api": "^1.0.2",
+		"axios": "^0.27.2",
+		"vite": "^3.1.0"
+	}
 }
