fix out filename

--- a/src/builder/plugin-generator/templates/package.json.template
+++ b/src/builder/plugin-generator/templates/package.json.template
@@ -7,7 +7,7 @@
 	"gozhtet": {
 		"name": "%{name}",
 		"description": "%{name} description",
-		"plugin": "build/test-plugin-api.js",
+		"plugin": "build/%{name}.js",
 		"theme": {
 			"colors": "colors.json",
 			"css": "build/custom-theme.css"
