fix types & css filename

--- a/src/builder/plugin-generator/templates/package.json.template
+++ b/src/builder/plugin-generator/templates/package.json.template
@@ -10,7 +10,7 @@
 		"plugin": "build/%{name}.js",
 		"theme": {
 			"colors": "colors.json",
-			"css": "build/custom-theme.css"
+			"css": "build/style.css"
 		}
 	},
 	"scripts": {
